--- a/DesktopAppGimnasio/DesktopAppGimnasio.csproj
+++ b/DesktopAppGimnasio/DesktopAppGimnasio.csproj
@@ -39,6 +39,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="PdfiumViewer.Updated" Version="2.14.4" />
+  </ItemGroup>
+
+  <ItemGroup>
     <EmbeddedResource Update="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
